--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,144 @@
+/* FONT */
+
 * {
   font-family: "Open Sans", sans-serif;
 }
 
-.title {
-  font-family: 'Sen', sans-serif;
+.sen {
+  font-family: 'Sen';
+}
+
+/* HERO */
+
+header {
+  position: relative;
+}
+
+.hero {
+  background-image: url(../images/home-hero-background.webp);
+  background-size: cover;
+  background-position: 10% 30%;
+  background-repeat: no-repeat;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  color: white;
+}
+
+.bar img {
+  width: 20%;
+  margin-left: 1rem;
+}
+
+.bar a {
+  margin-right: 1rem;
+}
+
+.bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  width: 60%;
+  margin: 0 auto;
+  position: absolute;
+  top:0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: white;
+  margin-top: 1rem;
+}
+
+.bar nav {
+  display: flex;
+  gap: 4rem;
+}
+
+.appointment {
+  display: flex;
+  flex: column;
+  justify-content: center;
+  text-align: center;
+  width: 60%;
+  position: absolute;
+  bottom: -15vh;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 4rem 1rem;
+  background-color: white;
+}
+
+.appointment form {
+  width: 90%;
+}
+.appointment form p{ 
+  margin-bottom: 1.3rem;
+}
+
+.appointment .book {
+  display: flex;
+  justify-content: space-between;;
+}
+
+.appointment input, .appointment select {
+  background-color:#f7f7f7;
+  width: 24%;
+  padding: 0.4rem ;
+  border: none;
+}
+
+.appointment button {
+  background-color:#0a0500;
+  color: white;
+  border:none
+}
+
+.provide {
+  background-color: #0a0500;
+  height: 50vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.5rem;;
+}
+
+.provide p {
+  font-size: 1rem;
+  color: white;
+}
+
+.services {
+  position: relative;
+}
+
+.services .boxs {
+  display: flex;
+  top:0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%;
+  gap: 1.5rem;
+  text-align: center;
+  position: absolute;
+  top: -10vh;
+
+}
+
+.services .boxs .box img {
+
+}
+
+.services .boxs .box {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap:1rem;
+  border: 1px solid #f7f7f7;
+  padding: 2rem;
+  
 }
