--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
   font-family: 'Sen';
 }
 
+button:hover, input[type="button"]:hover {
+cursor: pointer
+}
 /* HEADER */
 
 header {
@@ -24,17 +27,20 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1.1rem;
   color: white;
 }
 
-.bar img {
+.hero p:nth-child(1) {
+  font-weight: bold;
+}
+.hero h1, .hero p:nth-child(3) {
+  font-size:3.8rem;
+  font-weight: bold;
+}
+.bar a {
   width: 15%;
   margin-left: 1rem;
-}
-
-.bar a {
-  margin-right: 1rem;
 }
 
 .bar {
@@ -50,15 +56,28 @@ header {
   transform: translateX(-50%);
   background-color: white;
   margin-top: 1rem;
+  position: fixed;
+  z-index: 1;
+  font-size: 0.9rem;
 }
 
-.bar p {
-  
+.bar p span {
+  font-weight: bold;
 }
 
 .bar nav {
   display: flex;
-  gap: 1rem;
+  gap: 1rem; 
+}
+
+.bar .bar-right {
+  display: flex;
+  justify-content: space-between;
+  width: 22%;
+}
+
+.bar a {
+
 }
 
 .bar nav a:hover {
@@ -79,6 +98,10 @@ header {
   background-color: white;
 }
 
+.appointment .sen {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
 .appointment form {
   width: 90%;
 }
@@ -117,6 +140,15 @@ header {
   padding-top: 6rem;
 }
 
+.provide .sen {
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+.provide p:last-child {
+  font-weight: bold;
+  font-size: 0.9rem;
+}
 .provide p {
   font-size: 1rem;
   color: white;
@@ -136,7 +168,6 @@ header {
   text-align: center;
   position: absolute;
   top: -10vh;
-
 }
 
 .services .boxs .box {
@@ -147,6 +178,18 @@ header {
   gap:1rem;
   border: 1px solid #f7f7f7;
   padding: 2rem; 
+}
+
+.services .boxs .box p:last-child {
+  font-weight: bold;
+}
+
+.services .boxs .box p:nth-child(3) {
+  font-size: 0.9rem;
+}
+.services .boxs .box .sen {
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .services .buttons {
@@ -189,11 +232,28 @@ header {
 }
 
 .article1, .article2, .article3 {
-  display: flex;;
+  display: flex; 
+}
+
+.article1 .sen, .article2 .sen, .article3 .sen {
+  font-weight: bold;
+  font-size: 2rem;
+  color: #0a0500;
+
+}
+
+.article1 p, .article2 p, .article3 p {
+  font-size: 0.9rem;
+  color:grey;
+
 }
 
 .articles img {
   width: 50%;
+}
+
+.articles button {
+  font-size: smaller;
 }
 
 .content1, .content2, .content3 {
@@ -211,6 +271,10 @@ header {
   padding: 0.4rem;
 }
 
+.content1 li {
+margin-bottom: 1rem;
+}
+
 .how {
   text-align: center;
   width: 60%;
@@ -220,6 +284,16 @@ header {
   flex-direction: column;
   gap: 1rem;
   margin-bottom: 7rem;
+}
+
+.how .sen {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.how p:first-child {
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .how .boxs {
@@ -232,7 +306,13 @@ header {
   align-items: center;
   flex-direction: column;
   padding: 3rem;
-   border: 1px solid #f7f7f7;
+  border: 1px solid #f7f7f7;
+}
+
+.how .boxs .box .sen {
+  font-weight: bold;
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
 }
 
 .reviews {
@@ -243,6 +323,16 @@ header {
   flex-direction: column;
   gap: 1rem;
   margin-bottom: 7rem;
+}
+
+.reviews .sen {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.reviews p:first-child {
+  font-size: 0.9rem;
+  font-weight: bold;
 }
 
 .reviews .boxs {
@@ -269,6 +359,11 @@ header {
   border-radius: 50%;
 }
 
+.reviews .boxs .customer .infos p:nth-child(2) {
+  font-size: smaller;
+  color:grey;
+}
+
 .logos {
   display: flex;
   justify-content: space-between;
@@ -286,7 +381,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 40rem;
+  gap: 30rem;
   margin-bottom: 5rem;
 }
 
@@ -295,13 +390,27 @@ header {
    color: white;
    display: flex;
    flex-direction: column;
-   gap: 2rem;
 }
+
+.contact .text p:nth-child(1) {
+  font-weight: bold;
+  color: grey;
+  margin-bottom: 2rem;
+}
+
+.contact .text p:nth-child(2), .contact .text p:nth-child(3) { 
+  font-weight: bold;
+  font-size: 2rem;
+}
+
 
 .contact .button button {
   background-color: white;
   border: none;
-  padding: 0.5rem 1.4rem 0.5rem 1.4rem;
+  padding: 1rem 3rem;;
+  margin-top: 6rem;
+  font-size: smaller;
+  font-weight: bold;
 }
 
 /* FOOTER */
@@ -338,9 +447,21 @@ footer img {
 
 footer .sen {
   margin-bottom: 1.5rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+footer .infos p:nth-child(2),footer .infos p:nth-child(4), footer .infos p:nth-child(6) {
+  font-weight: bold;
+}
+
+footer .infos p:nth-child(3), footer .infos p:nth-child(5), footer .infos p:nth-child(7) {
+  font-size: 0.9rem;
+  margin-bottom: 1.3rem;
 }
 
 .copyright {
   text-align: center;
   padding: 1.5rem;
+  font-size: smaller;
 }
