--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ header {
 }
 
 .hero {
-  background-image: url(../images/home-hero-background.webp);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url(../images/home-hero-background.webp);
   background-size: cover;
   background-position: 10% 30%;
   background-repeat: no-repeat;
@@ -31,6 +32,9 @@ header {
   color: white;
 }
 
+/* .hero {
+  filter: brightness(50%);
+} */
 .hero p:nth-child(1) {
   font-weight: bold;
 }
@@ -74,7 +78,6 @@ header {
   display: flex;
   justify-content: space-between;
   width: 22%;
-  
 }
 
 .bar nav a:hover {
@@ -377,7 +380,8 @@ margin-bottom: 1rem;
 }
 
 .contact {
-  background-image: url(../images/home-contact-section-background.webp);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  url(../images/home-contact-section-background.webp);
   background-size: cover;
   height: 50vh;
   display: flex;
